# jni

./: .gitignore  build.gradle.kts  build.sh
cpp/: CMakeLists.txt  com_man_JNI_CPP.cpp  com_man_JNI_CPP.h
javacpp/: JavaCpp.h
rust/: Cargo.toml
rust/src/: lib.rs
src/main/java/com/man/: JNA.java  JNI_CPP.java  JNI_RUST.java  JavaCpp.java
